Merge (#66364)